Fix Broken Layout

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,265 +1,107 @@
-/*
-* box-sizing: border-box -- Include padding and border in the total size of the div
-*/
+/* GENERAL STYLES */
 
 * {
     box-sizing: border-box;
 }
 
-body {
-    background:  url(/assets/images/bknd-image.jpg);
-    font-size:  18px;
-    line-height: 32px;
-    font-family:  'Arial', 'Helvetica Neue', 'Helvetica', sans-serif;
-    color: #777;
+h1 {
+    font-family: 'Georgia', 'Times', 'Times New Roman', serif;
+    background-color: #4aaaa5;
+    color: #ffffff;
+    width: 250px;
+   padding: 15px;
+    float: left;
+    margin: 0px;   
 }
 
-/*
-* max-width : 960px -- take up the total width of the page up to 960px
-*  margin: 0 auto; -- centers everything
-*  clear: both; -- Don't allow floating elements on the left or the right side of a specified  element
-*/
-
-.container {
-    width: 100%;
-    max-width:  960px;
-    margin: 0 auto;
-    clear: both;
-}
-
-
-h1, h2, h3, p {
-    margin-bottom:  20px;
-}
-
-p:last-child {
-    margin-bottom: 0;
-}
-
-h1, h2, h3 {
-   font-family:  'Georgia', 'Times', 'Times New Roman', serif;
-    font-weight: 700;
+h2 {
+    font-family: 'Georgia', 'Times', 'Times New Roman', serif;
     color: #4aaaa5;
 }
 
-h1 {
-    font-size: 30px;
-    line-height: 50px;
-    border-bottom:  3px solid #ddd;
-    padding-bottom: 20px;
-}
-
-
-h2, h3 {
-    font-size: 22px;
-}
-
-
-/* header */
-#masthead {
-    background:  #fff;
-    margin:  0 0 30px;
-    z-index:  99;
-    color: #fff;
+header {
+    background-color: #ffffff;
+    border: 1px solid #dddddd;
+    width: 960px;
     overflow: auto;
-    border-bottom:  2px solid #ccc;
-    position: fixed; 
-    width: 100%;
+    margin-bottom: 16px;
+    position: fixed;
+    top: 0;
 }
 
-#logo {
-    width: 250px;
-    height: 90px;
-    background: #4aaaa5;
-    float: left;
-    font-family:  'Georgia', 'Times', 'Times New Roman', serif;
-    text-align: center;
-    line-height: 90px;
-    color: #fff;
-    font-weight:  700;
-    font-size: 30px;
-    text-decoration: none;
+body {
+    background-image: url("../images/bknd-image.jpg");
+    font-family: 'Arial', 'Helvetica Neue', 'Helvetica', sans-serif;
+    color: #777777;
+    line-height: 26px
 }
 
-nav {
+section {
+    width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+/* NAVIGATION STYLES */
+
+.nav-items {
     float: right;
-    margin-top:  25px;
+    margin-right: 18px;
 }
 
+.nav-items ul li {
+    display: inline-block;
+    margin: 0 5px 0 5px;
+}
 
-/*
-* display:  inline-block; -- objects lay next to each other if they have enough room.
-*/
-
-nav a {
-    color: #999;
+.nav-items  ul li a {
+    color: #777777;
     text-decoration: none;
-    margin-left:  15px;
-    display:  inline-block;
-    border-left:  1px solid #efefef;
-    padding-left: 15px;
-    line-height:  18px;
 }
 
-
-/*
-* nav a:first-child; -- First a link in the nav bar - remove border
-*/
-nav a:first-child {
-    border-left: 0 none;
+#profile-pic {
+    width: 33%;
+    float: left;
+    margin-right: 20px;
 }
 
-
-/*  MAIN SECTION */
-
-#main-container {
-    padding-top:  30px;
-}
-
-/*
-*  width: 100%; -- Items in main section should take up 100% of their container (the div)
-*  max-width: 650px; -- no mater how big the browser gets, max width should only go up to 650px;
-*/
 .main-section {
-    background: #fff;
-    padding: 30px;
-    margin: 0 0 40px 0;
-    width: 100%;
-    max-width: 650px;
-    float: left;
-    border: 1px solid #ddd;
-}
-
-
-.auth-image {
-    width: 200px;
-    height: auto;
-    margin-top: 10px;
-    float: left;
-    margin-right: 25px;
-}
-
-
-
-/*  SIDEBAR */
-.sidebar {
-    background: #fff;
-    padding: 30px;
-    width:  100px;
-    max-width:  270px;
-    float: right;
-    border: 1px solid #ddd;
-    margin-bottom: 20px;
-}
-
-h3, sidebar, h2 {
-    border-bottom:  2px solid #eee;
-    padding-bottom:  20px;
-    margin-bottom:  15px;
-    line-height: 22px;
-}
-
-.social {
-    width:  62px;
-    height: 62px;
-    margin-top: 8px;
-    margin-right: 5px;
-}
-
-.social:last-child {
-    margin-right: 0;
-}
-
-
-/*  FOOTER */
-footer {
-    background:  #666;
-    color: #fff;
-    padding: 30px;
     clear: both;
-    border-top:  8px solid #4aaaa5;
-    color: #ccc;
-    font-size 12px;
-    text-align: center;
+    width: 960px;
+    background-color: #ffffff;
+    border: 1px solid #dddddd;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 80px
 }
 
-
-/*  PORTFOLIO */
-.work {
-    width: 274px;
-    overflow: auto;
-    position:  relative;
+.thumbnail {
     float: left;
-    margin:  20px 0 25px;
+    position: relative;
+    margin: 18px;
 }
 
-.work:nth-child(even) {
-    margin-right:  40px;
-}
-
-.work img {
-    width: 100%;
-    border: 0 none; 
-    opacity:  .8;
-}
-
-.work h3 {
-    border-bottom: 0;
-    background: #4aaaa5;
-    color: #fff;
-    text-align: center;
+.text-box {
     position: absolute;
-    bottom: 20px;
-    padding: 15px;
-    width: 100%;
-    line-height:  30px;
-    margin-bottom: 0;
-    font-weight: 300;
+    bottom: 30px;
+    background: #4aaaa5;
+    width: 200px;
+    text-align: center;
+    color: white;
 }
 
 
-/*  CONTACT */
-#contact-form ul {
-    margin-bottom:  20px;
-}
-
-#contact-form li {
-    margin-bottom: 10px;
-}
-
-label,
-input[type=text],
-input[type=email].
-textarea {
+footer {
+    text-align: center;
+    text-transform: uppercase;
+    background-color: #666666;
+    border-top: 10px solid  #4aaaa5;
+    color: #ffffff;
+    font-size: 14px;
     display: block;
     width: 100%;
+    position: fixed;
+    left: 0;
+    bottom: 0;
 }
-
-
-input[type=text],
-input[type=email],
-textarea {
-    height: 35px;
-    border: 1px solid #ddd;
-    padding: 0 10px;
-    font-size:  14px;
-}
-
-textarea {
-    height: 200px;
-}
-
-
-input[type=submit]{
-    background: #4aaaa5;
-    border: 0 none;
-    color: #fff;
-    font-size:  18px;
-    padding: 10px;
-    cursor: pointer;
-}
-
-
-
-
-
